对要点击两次才能登陆的问题进行解决并进行了一些其他的简单修改

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -50,7 +50,7 @@
                                 </label>
                             </div>
                             <div class="form-group mt-4" style="margin-left: 13%;">
-                                <button type="submit" id="dl" class="btn btn-primary" >Submit</button>
+                                <button type="button" id="dl" class="btn btn-primary" >Submit</button>
                             </div>
                             <div class="form-group mt-5" style="margin-left: 13%;">
                                 没有账号？<a href="#">注册</a>
